# AI-research-MCP

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/MCP_client/: client.py  requirements.txt
src/MCP_client/main/: mcp_client_logic.py
src/MCP_client/personality/: prompt.py
src/MCP_server/: requirements.txt  server.py
src/MCP_server/configs/: configs.py
src/MCP_server/embeddings/: vectorizer.py
src/MCP_server/ingestion/: vector_store.py
src/MCP_server/models/: models.py
src/MCP_server/parsers/: pdf_parser.py
src/MCP_server/search/: store_search.py
src/MCP_server/utils/: gcs_utils.py  input_handler.py
src/docker/frontend/: Dockerfile
src/docker/mcp_client/: Dockerfile
src/docker/mcp_server/: Dockerfile
src/frontend/: app.py  requirements.txt
